@@ -432,6 +432,11 @@ public class Launcher
 	/*
 	 * TODO arrêter les threads dont les ia ont été éliminées du jeu
 	 */
+	
+	/*
+	 * TODO bombe menaçant les agents
+	 * poser une bombe de plus en plus forte, au lieu de faire du hasard
+	 */
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // MULTITHREADING / MULTIPROCESSUS	//////////////////////////////////////////////////////////////////////////////////////////
